--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wkrk-extended",
   "type": "module",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Handy methods to extend the native Request and Response objects",
   "source": "src/index.ts",
   "main": "./dist/index.js",
@@ -39,5 +39,7 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
-  "files":  ["dist/"]
+  "files": [
+    "dist/"
+  ]
 }
